--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,6 @@
 @import "shared/_variables.scss";
 @import "shared/_typography.scss";
-body{
+body,html{
     width: 100%;
     overflow-x: hidden;
 }
