--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -133,6 +133,7 @@
 .featured-products,.new-arrivals-products,.latest-news{
     .title-with-divider{
         .filtres{
+            margin-left: 20px;
             @include media-breakpoint-down(md){
                 position: absolute;
                 top: 50px;
