--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,6 @@ h3 {
 
 .title-with-divider .divider {
   margin-left: 20px;
-  margin-right: 20px;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -65,7 +64,7 @@ h3 {
   background-color: #ddc980;
 }
 
-body {
+body, html {
   width: 100%;
   overflow-x: hidden;
 }
