--- a/css/productLayout.scss
+++ b/css/productLayout.scss
@@ -9,6 +9,7 @@
 
 .product-row{
     margin-top: 15px;
+    padding-right: 15px;
     height: $product-card-height + 40px;
     overflow: visible;
     @include media-breakpoint-down(md) { 
@@ -17,6 +18,7 @@
     }
 }
 .three-product-row{
+    padding-right: 15px;
     height: ($product-card-height + 65px) * 2;
     margin-top: 0;
     @include media-breakpoint-down(md) { 
@@ -26,6 +28,7 @@
 
 //Single product
 .product{
+    overflow: hidden;
     .card{
         position: absolute;
         border: 2px solid $color-smoke;
