--- a/css/homepage.css
+++ b/css/homepage.css
@@ -133,7 +133,7 @@
   .featured-products .title-with-divider .filtres, .new-arrivals-products .title-with-divider .filtres, .latest-news .title-with-divider .filtres {
     position: absolute;
     top: 50px;
-    right: 5px;
+    left: 0px;
   }
 }
 
@@ -161,6 +161,12 @@
   margin: 2.5px;
 }
 
+@media (max-width: 767.98px) {
+  #customNav-featured-products button, #customNav-new-arrivals-products button, #customNav-latest-news-products button {
+    display: none;
+  }
+}
+
 #customNav-featured-products button:hover, #customNav-new-arrivals-products button:hover, #customNav-latest-news-products button:hover {
   background-color: #ffd333;
 }
@@ -173,6 +179,14 @@
 
 #customNav-featured-products button:hover i, #customNav-new-arrivals-products button:hover i, #customNav-latest-news-products button:hover i {
   color: #3d464d;
+}
+
+@media (max-width: 767.98px) {
+  #customNav-featured-products {
+    position: absolute;
+    top: 50px;
+    left: 15px;
+  }
 }
 
 .latest-news .news-wrapper .news-info-wrapper {
