--- a/css/homepage.css
+++ b/css/homepage.css
@@ -8,7 +8,7 @@
 .homepage-carousel .slide, .homepage-carousel .slide-one {
   background-size: cover;
   background-position: center;
-  background-color: #3d464d;
+  background-color: #3f3d4d;
   background-repeat: no-repeat;
   min-height: 400px;
 }
@@ -36,7 +36,7 @@
 .homepage-card-row .homepage-card .homepage-card-title, .homepage-card-row .homepage-card .categories-card-title, .homepage-card-row .categories-card .homepage-card-title, .homepage-card-row .categories-card .categories-card-title, .categories-card-row .homepage-card .homepage-card-title, .categories-card-row .homepage-card .categories-card-title, .categories-card-row .categories-card .homepage-card-title, .categories-card-row .categories-card .categories-card-title {
   margin-top: 10px;
   font-weight: 700;
-  color: #3d464d;
+  color: #3f3d4d;
 }
 
 .homepage-card-row .homepage-card .homepage-card-text, .homepage-card-row .homepage-card .categories-card-text, .homepage-card-row .categories-card .homepage-card-text, .homepage-card-row .categories-card .categories-card-text, .categories-card-row .homepage-card .homepage-card-text, .categories-card-row .homepage-card .categories-card-text, .categories-card-row .categories-card .homepage-card-text, .categories-card-row .categories-card .categories-card-text {
@@ -93,7 +93,7 @@
 }
 
 .categories-card-row .categories-card .categories-card-wrapper .categories-card-info .categories-card-title a {
-  color: #3d464d;
+  color: #3f3d4d;
 }
 
 .categories-card-row .categories-card .categories-card-wrapper .categories-card-info .categories-card-title a:hover {
@@ -125,6 +125,45 @@
   background-image: url("../images/product.jpg");
 }
 
+.banner-container {
+  height: 350px;
+  overflow: hidden;
+  padding: 0;
+}
+
+.banner-container .row {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.banner-container .banner {
+  background-image: url("../images/banner.jpg");
+  height: 200px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.banner-container .banner .btn-standard {
+  max-width: 200px;
+  margin: auto;
+  margin-top: 15px;
+}
+
+.brand-container {
+  padding: 0;
+  margin-top: 35px;
+}
+
+.brand-container .row {
+  margin-left: 15px;
+  margin-right: 15px;
+  border: 4px solid #f0f0f0;
+}
+
+.brand-container .brand-item {
+  padding: 15px;
+}
+
 .featured-products .title-with-divider .filtres, .new-arrivals-products .title-with-divider .filtres, .latest-news .title-with-divider .filtres {
   margin-left: 20px;
 }
@@ -140,7 +179,7 @@
 .featured-products .title-with-divider .filtres a, .new-arrivals-products .title-with-divider .filtres a, .latest-news .title-with-divider .filtres a {
   border: 2px solid white;
   border-radius: 500px;
-  color: #3d464d;
+  color: #3f3d4d;
   padding: 0 10px 0 10px;
   font-weight: 700;
 }
@@ -178,7 +217,7 @@
 }
 
 #customNav-featured-products button:hover i, #customNav-new-arrivals-products button:hover i, #customNav-latest-news-products button:hover i {
-  color: #3d464d;
+  color: #3f3d4d;
 }
 
 @media (max-width: 767.98px) {
@@ -187,6 +226,22 @@
     top: 50px;
     left: 15px;
   }
+}
+
+.latest-news .news-wrapper .news-image-wrapper {
+  overflow: hidden;
+}
+
+.latest-news .news-wrapper .news-image-wrapper img {
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.latest-news .news-wrapper .news-image-wrapper img:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 .latest-news .news-wrapper .news-info-wrapper {
