--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -129,6 +129,39 @@
     }
 }
 
+.banner-container{
+    height: 350px;
+    overflow: hidden;
+    padding: 0;
+    .row{
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    .banner{
+        background-image: url("../images/banner.jpg");
+        height: 200px;
+        background-repeat: no-repeat;
+        background-position: center;
+        .btn-standard{
+            max-width: 200px;
+            margin: auto;
+            margin-top: 15px;
+        }
+    }
+}
+
+.brand-container{
+    padding: 0;
+    margin-top: 35px;
+    .row{
+        margin-left: 15px;
+        margin-right: 15px;
+        border: 4px solid $color-smoke;
+    }
+    .brand-item{
+        padding: 15px;
+    }
+}
 
 .featured-products,.new-arrivals-products,.latest-news{
     .title-with-divider{
@@ -190,6 +223,16 @@
 
 .latest-news{
     .news-wrapper{
+        .news-image-wrapper{
+            overflow: hidden;
+            img{
+                transition: 1s;
+                &:hover{
+                    transform: scale(1.2);
+                    transition: 1s;
+                }
+            }
+        }
         .news-info-wrapper{
             margin-top: 15px;
             .news-date{
