--- a/css/productLayout.scss
+++ b/css/productLayout.scss
@@ -17,7 +17,7 @@
         margin-top: 0;
     }
     @include media-breakpoint-down(sm) { 
-        height: ($product-card-height + 50px) * 4;
+        height: ($product-card-height + 100px) * 4;
     }
 }
 .three-product-row{
@@ -28,7 +28,7 @@
         height: ($product-card-height + 50px) * 3;
     }
     @include media-breakpoint-down(sm) { 
-        height: ($product-card-height + 50px) * 3 * 2;
+        height: ($product-card-height + 100px) * 3 * 2;
     }
 }
 
@@ -45,17 +45,32 @@
         @include media-breakpoint-down(md) { 
             height: $product-card-height + 40px;
         }
+        @include media-breakpoint-down(sm) { 
+            height: $product-card-height + 90px;
+
+        }
         &:hover{
             border-color: $primary;
             height: $product-card-height + 40px;
+            @include media-breakpoint-down(sm) {
+                height: $product-card-height + 90px;
+            }
         }
         .product-photo{
             display: block;
             .product-photo-wrapper{
                 max-width: 170px;
                 margin: auto;
+                overflow: hidden;
                 @include media-breakpoint-down(md) { 
                     max-width: 50%;
+                }
+                img{
+                    transition: 0.5s;
+                    &:hover{
+                        transform: scale(1.15);
+                        transition: 0.5s;
+                    }
                 }
             }
         }
@@ -87,6 +102,9 @@
         }
         .visible{
             height: $product-card-height - 22px;
+            @include media-breakpoint-down(sm) { 
+                height: $product-card-height + 50px - 22px;
+            }
         }
         .product-hidden-bar{
             display: flex;
