--- a/css/shared/_typography.scss
+++ b/css/shared/_typography.scss
@@ -16,6 +16,10 @@ h3{
     font-size: 30px;
 }
 
+.btn{
+    border-radius: 0;
+}
+
 .title-with-divider{
     display: flex;
     align-items: center;
